--- a/index_auto.html
+++ b/index_auto.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="hotel-logo">
             <img src="regency.jpg" alt="Hyatt Regency" class="logo-img" onerror="this.src='regency_placeholder.svg'">
-            <h2>Hyatt Regency</h2>
+          <!--  <h2>Hyatt Regency</h2> -->
         </div>
         <div class="event-title">
             <h1>🎉 Annual Staff Party 2026 🎉</h1>
@@ -23,7 +23,7 @@
         </div>
         <div class="hotel-logo">
             <img src="centric.jpg" alt="Hyatt Centric" class="logo-img" onerror="this.src='centric_placeholder.svg'">
-            <h2>Hyatt Centric</h2>
+          <!--  <h2>Hyatt Centric</h2> -->
         </div>
     </header>
 
