--- a/index_auto.html
+++ b/index_auto.html
@@ -19,7 +19,7 @@
         </div>
         <div class="event-title">
             <h1>🎉 Annual Staff Party 2026 🎉</h1>
-            <p class="subtitle">Lucky Draw Raffle - Auto Mode</p>
+            <p class="subtitle">Lucky Draw Raffle</p>
         </div>
         <div class="hotel-logo">
             <img src="centric.jpg" alt="Hyatt Centric" class="logo-img" onerror="this.src='centric_placeholder.svg'">
